<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">幸运转盘</string>

    <!-- 标签页标题 -->
    <string name="tab_spin">转盘</string>
    <string name="tab_settings">设置</string>

    <!-- 转盘页面 -->
    <string name="spin_title">幸运转盘</string>
    <string name="start_spin">开始转动</string>
    <string name="result_title">恭喜你!</string>
    <string name="result_message">转到了：%s</string>
    <string name="complete_button">完成</string>
    <string name="spin_again">再来一次</string>

    <!-- 设置页面 -->
    <string name="settings_title">转盘设置</string>
    <string name="save_settings">保存设置</string>
    <string name="settings_saved">设置已保存</string>
    <string name="option_label">选项 %d</string>
    <string name="option_hint">请输入选项内容</string>

    <!-- 默认选项 -->
    <string name="default_option_1">选项1</string>
    <string name="default_option_2">选项2</string>
    <string name="default_option_3">选项3</string>
    <string name="default_option_4">选项4</string>
    <string name="default_option_5">选项5</string>
    <string name="default_option_6">选项6</string>
    <string name="default_option_7">选项7</string>
    <string name="default_option_8">选项8</string>
    <string name="default_option_9">选项9</string>
    <string name="default_option_10">选项10</string>
    <string name="default_option_11">选项11</string>
    <string name="default_option_12">选项12</string>

    <!-- 提示信息 -->
    <string name="empty_options_warning">请至少填写一个选项</string>
    <string name="spinning_message">转盘旋转中...</string>
    <string name="start_spin_desc">开始旋转...</string>

</resources>